--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "@mdi/font": "^5.8.55",
+    "buefy": "^0.9.4",
+    "core-js": "^3.7.0",
+    "lodash": "^4.17.20",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
+    "vue-pdf": "^4.2.0",
+    "vue-router": "^3.4.9",
+    "vue-touch-keyboard": "^0.3.2",
+    "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -20,13 +26,19 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
+    "axios": "^0.18.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.9.0",
     "prettier": "^1.19.1",
-    "sass": "^1.26.5",
+    "sass": "^1.29.0",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-cli-plugin-axios": "0.0.4",
+    "vue-cli-plugin-buefy": "~0.3.7",
+    "vue-cli-plugin-vuetify": "~2.0.7",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
   }
 }
